fixed the homepage for samepinch

--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
         <div class="image1 image8"></div>
       </div>
       <div class="btn">
-        <button class="btn1">Explore</button>
+        <button class="btn1"(click)="samepinch()">Explore</button>
       </div>
     </div>
   </div>
