subpages and customization is added sucessfully

--- a/Boutique-FE/src/app/order-details/order-details.component.html
+++ b/Boutique-FE/src/app/order-details/order-details.component.html
@@ -11,6 +11,7 @@
       <p><strong>Order ID:{{orders.id}}</strong> </p>
       <p><strong>Order Date:{{jsDate}}</strong> </p>
       <p><strong>PaymentStatus:{{orders.paymentStatus}}</strong> </p>
+      <p><strong>Customization:{{orders.customization}}</strong> </p>
     </section>
   
     <!-- Customer Information -->
