--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -1,27 +1,27 @@
 <div class="category-container">
     <div class="category-items">
         <div class="category-item">
-            <div class="category-image MomDaughterCombo" (click)="saree()"></div>
+            <div class="category-image MomDaughterCombo" (click)="momanddaughter()"></div>
             <div class="category-name">Mom & DaughterCombo</div>
         </div>
         <div class="category-item">
-            <div class="category-image familycombo"></div>
+            <div class="category-image familycombo" (click)="familycombo()"></div>
             <div class="category-name">Family Combo</div>
         </div>
         <div class="category-item">
-            <div class="category-image cs"></div>
+            <div class="category-image cs" (click)="cousinsquade()"></div>
             <div class="category-name">Cousins Squard</div>
         </div>
         <div class="category-item">
-            <div class="category-image bd"></div>
+            <div class="category-image bd" (click)="bridalsquade()"></div>
             <div class="category-name">Bridesmade</div>
         </div>
         <div class="category-item">
-          <div class="category-image bm"></div>
+          <div class="category-image bm" (click)="bridalcostumes()"></div>
           <div class="category-name">Bridal Coustume</div>
       </div>
       <div class="category-item">
-        <div class="category-image mens"></div>
+        <div class="category-image mens" (click)="menswear()"></div>
         <div class="category-name">Menswear</div>
     </div>
     </div>
