--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -107,7 +107,7 @@
       </div>
       <div class="category-item">
         <div class="category-image Saree"></div>
-        <div class="category-name">Saree</div>
+        <div class="category-name" (click)="saree()">Saree</div>
     </div>
     <div class="category-item">
       <div class="category-image HalfSaree"></div>
