--- a/Boutique-FE/src/pages/sareefolder/saree/saree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/saree/saree.component.css
@@ -219,4 +219,10 @@
   .next-btn:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
+  .product-image {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
   
