--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
@@ -82,7 +82,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    /* gap: 20px; */
   }
   
   .product-title {
@@ -199,5 +199,19 @@ body {
       flex-direction: column;
       gap: 20px;
     }
+  }
+  .in-stock {
+    color: green;
+    font-weight: bold;
+  }
+  
+  .out-of-stock {
+    color: red;
+    font-weight: bold;
+  }
+  
+  .qty-btn:disabled, .btn:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
   }
   
