--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.html
@@ -26,6 +26,11 @@
       <p class="product-description">{{ itemData.description }}</p>
       <p class="price">{{ itemData.price | currency }}</p>
   
+      <div class="sizeguide" *ngIf="selectedProduct.stock > 0">
+        <a href="/saree" class="sizeguide">
+          <h3>Size Guide</h3>
+        </a>
+      </div>
       <!-- Size Selection -->
       <div class="size-options">
         <h3>Select Size</h3>
@@ -40,7 +45,11 @@
           </button>
         </div>
       </div>
-  
+      
+      <div class="stock-status">
+        <p *ngIf="itemData.stock > 0" class="in-stock">In Stock</p>
+        <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
+      </div>
       <!-- Customization -->
       <div class="customization">
         <h3>Customization</h3>
@@ -49,6 +58,7 @@
           placeholder="Enter customization details..."
         ></textarea>
       </div>
+     
   
       <!-- Quantity & Actions -->
       <div class="actions">
