changes made in profile

--- a/Boutique-FE/src/pages/profile/profile.component.css
+++ b/Boutique-FE/src/pages/profile/profile.component.css
@@ -30,12 +30,19 @@
     margin-bottom: 20px;
   }
   
+  .profile-image{
+    content: url('../../assets/images/mo1.png');
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
   .profile-image img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
     margin-right: 20px;
+  
   }
   
   .profile-details h2 {
