--- a/Boutique-FE/src/layout/footer/footer.component.html
+++ b/Boutique-FE/src/layout/footer/footer.component.html
@@ -2,11 +2,11 @@
   <!-- Customer Service Row -->
   <div class="footer-customer-service">
     <ul class="customer-service-links">
-      <li><a href="/terms-and-conditions">Terms and Conditions</a></li>
-      <li><a href="/privacy-policy">Privacy Policy</a></li>
-      <li><a href="/return-exchange-policy">Return and Exchange Policy</a></li>
-      <li><a href="/about-us">About Us</a></li>
-      <li><a href="/contact-us">Contact Us</a></li>
+      <li  [routerLink]="'/terms'">Terms and Conditions</li>
+      <li  [routerLink]="'/policy'">Privacy Policy</li>
+      <li  [routerLink]="'/return'">Return and Exchange Policy</li>
+      <li  [routerLink]="'/aboutus'">About Us</li>
+      <!-- <li><a href="/contact-us">Contact Us</a></li> -->
     </ul>
   </div>
 
