--- a/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
@@ -7,21 +7,21 @@
     >
       <div class="card-image">
         <!-- Image Carousel -->
-        <div *ngIf="product.images?.length > 1" class="carousel">
+        <div *ngIf="product.imageUrl?.length > 1" class="carousel">
           <img
-            [src]="url + product.images[currentIndexes[i]]"
+            [src]="url + product.imageUrl[currentIndexes[i]]"
             class="product-image"
             alt="Product image"
           />
           <button
             class="prev-btn"
-            (click)="previousImage(i, product.images); $event.stopPropagation()"
+            (click)="previousImage(i, product.imageUrl); $event.stopPropagation()"
           >
             &#10094;
           </button>
           <button
             class="next-btn"
-            (click)="nextImage(i, product.images); $event.stopPropagation()"
+            (click)="nextImage(i, product.imageUrl); $event.stopPropagation()"
           >
             &#10095;
           </button>
