--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
@@ -11,7 +11,7 @@ body {
   .boutique-container {
     display: flex;
     gap: 40px;
-    padding: 40px;
+    /* padding: 40px; */
     max-width: 1200px;
     margin: 0 auto;
   }
@@ -23,6 +23,7 @@ body {
    width: 500px;
    height: 500px;
     margin: auto;
+    background-image: url('../../../assets/images/bm.jpg');
   }
   
   .featured-image {
@@ -79,7 +80,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    /* gap: 20px; */
   }
   
   .product-title {
@@ -194,7 +195,29 @@ body {
   @media (max-width: 768px) {
     .boutique-container {
       flex-direction: column;
-      gap: 20px;
+      gap: 20px !important;
     }
+    .image-gallery {
+width: 400px;
+height: 400px;
+    }
+.featured-image{
+  width: 400px;
+height: 400px;
+}
   }
-  
+  @media (max-width: 480px) {
+    .boutique-container {
+      flex-direction: column;
+      gap: 20px !important;
+      margin: 0px;
+    }
+    .image-gallery {
+ width: 400px;
+height: 400px;
+    }
+.featured-image{
+  width: 400px;
+height: 400px;
+}
+  }
