--- a/Boutique-FE/src/pages/dashboard/dashboard.component.css
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.css
@@ -57,15 +57,7 @@
   /* background-color: #e9e9e9;  */
   flex-direction: column;
 }
-/* .container{
-  width:200px;
-  height: 200px;
-  border: 1px solid black;
-  border-radius: 50%;
-  margin-bottom: 10px;
-  content: url('../../assets/images/Miya1.png');
-} */
-/* Container Styling */
+
 .container {
   position: relative;
   width: 200px;
@@ -299,10 +291,10 @@
   background-position: center;
   border-radius: 8px;
 }
-@media(max-width:680px){
+@media(max-width:768px){
   .layout {
     display: flex;
-    flex-direction: row; /* Stack .mokshe and .samepinch vertically */
+    flex-direction: column; /* Stack .mokshe and .samepinch vertically */
     gap: 20px; /* Space between .mokshe and .samepinch */
     justify-content: center;
     align-items: center;
@@ -311,7 +303,7 @@
     height: 100%;
   }  
 }
-@media(max-width:400px){
+@media(max-width:480px){
   .layout {
     display: flex;
     flex-direction: column; /* Stack .mokshe and .samepinch vertically */
@@ -319,7 +311,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 10px !important;
+    width: 100%;
+    /* padding: 10px !important; */
   }
   .image-container, .image-container1{
     width: 250px;
@@ -329,14 +322,18 @@
   .logo-container1,.logo-container {
     flex-direction: column;
     width: 300px;
-    height: 400px;
+    height: 300px;
     /* background-color: #e9e9e9;  */
   } 
-  .container,.container1{
-    width:150px;
-    height: 150px;
+  /* .container,.container1{
+    width:150px !important;
+    height: 150px !important;
     border: 1px solid black;
     border-radius: 50%;
     margin-bottom: 10px;
   }
+  .image-container image{
+    width: 100%;
+    height: 100%;
+  } */
 }
