--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.css
@@ -22,12 +22,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('../../../assets/images/bm.jpg');
   }
   
   .featured-image {
     width: 100%;
     max-width: 500px;
     height: 500px;
+    background-image: url('../../../assets/images/bm.jpg');
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -42,6 +44,7 @@ body {
     height: auto;
     display: block;
     object-fit: cover;
+    background-image: url('../../../assets/images/bm.jpg');
   }
   
   .thumbnails {
