--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.html
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.html
@@ -60,6 +60,17 @@
         </div>
       </div>
   
+      <div class="sizeguide" *ngIf="selectedProduct.stock > 0">
+        <a href="/saree" class="sizeguide">
+          <h3>Size Guide</h3>
+        </a>
+      </div>
+
+      <div class="stock-status">
+        <p *ngIf="itemData.stock > 0" class="in-stock">In Stock</p>
+        <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
+      </div>
+
       <!-- Customization -->
       <div class="customization">
         <h3>Customization</h3>
