--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.html
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.html
@@ -4,7 +4,7 @@
       <!-- Large Display Image -->
       <div class="featured-image">
         <img [src]="url + itemData.imageUrl[currentIndex]" alt="Gallery Image" class="featured-img" />
-        
+        <a href="https://app.epatrolz.com" class="hover-link" target="_blank">https://app.epatrolz.com</a>
         <!-- Navigation Buttons (only if multiple images exist) -->
         <button 
           *ngIf="itemData.imageUrl.length > 1" 
