size is added in order

--- a/Boutique-FE/src/app/order-details/order-details.component.html
+++ b/Boutique-FE/src/app/order-details/order-details.component.html
@@ -33,6 +33,7 @@
             <p><strong>Product Name:{{items.name}}</strong> </p>
             <p><strong>Quantity:{{items.quantity}}</strong> </p>
             <p><strong>Price:{{items.price}}</strong> </p>
+            <p><strong>size:{{items.size}}</strong> </p>
           </div>
         </li>
       </ul>
