changes made in size guide

--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.html
@@ -3,20 +3,38 @@
     <div class="image-gallery">
       <!-- Large Display Image -->
       <div class="featured-image">
-        <img [src]=" url + itemData.imageUrl" alt="" class="featured-img" />
-      </div>
-  
-      <!-- Thumbnail Gallery -->
-      <div class="thumbnails">
-        <div
-          *ngFor="let image of smallImages"
-          class="thumbnail"
-          (click)="selectImage(image)"
-          [class.active]="image === selectedImage"
+        <img [src]="url + itemData.imageUrl[currentIndex]" alt="Gallery Image" class="featured-img" />
+        <a href="https://app.epatrolz.com" class="hover-link" target="_blank">https://app.epatrolz.com</a>
+        <!-- Navigation Buttons (only if multiple images exist) -->
+        <button 
+          *ngIf="itemData.imageUrl.length > 1" 
+          class="prev-btn"
+          (click)="previousImage(); $event.stopPropagation()"
+          type="button"
         >
-          <img [src]="image" alt="" class="thumbnail-img" />
-        </div>
+          &#10094;
+        </button>
+    
+        <button 
+          *ngIf="itemData.imageUrl.length > 1" 
+          class="next-btn"
+          (click)="nextImage(); $event.stopPropagation()"
+          type="button"
+        >
+          &#10095;
+        </button>
       </div>
+    
+      <!-- Thumbnail Navigation -->
+      <!-- <div class="thumbnails" *ngIf="imageUrls.length > 1">
+        <img 
+          *ngFor="let img of itemData.imageUrl; let i = index"
+          [src]="url + img"
+          [ngClass]="{'active': i === currentIndex}"
+          (click)="selectImage(i)"
+          class="thumbnail"
+        />
+      </div> -->
     </div>
   
     <!-- Right Side: Product Details -->
@@ -27,10 +45,37 @@
       <p class="price">{{ itemData.price | currency }}</p>
   
       <div class="sizeguide" *ngIf="selectedProduct.stock > 0">
-        <a href="/saree" class="sizeguide">
+        <button class="sizeguide-btn" (click)="openSizeGuide()">
           <h3>Size Guide</h3>
-        </a>
+        </button>
       </div>
+      
+      <!-- Popup Modal -->
+      <div class="size-modal" *ngIf="isSizeGuideOpen">
+        <div class="size-modal-content">
+          <span class="close-btn" (click)="closeSizeGuide()">&times;</span>
+          <h2>Size Guide</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Size</th>
+                <th>Chest</th>
+                <th>Waist</th>
+                <th>Length</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let size of sizeGuide">
+                <td>{{ size.Size }}</td>
+                <td>{{ size.chest }}</td>
+                <td>{{ size.waist }}</td>
+                <td>{{ size.length }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      
       <!-- Size Selection -->
       <div class="size-options">
         <h3>Select Size</h3>
@@ -47,7 +92,7 @@
       </div>
       
       <div class="stock-status">
-        <p *ngIf="itemData.stock > 0" class="in-stock">In Stock</p>
+        <p *ngIf="itemData.stock > 0" class="in-stock">  In Stock ({{ itemData.stock }}) </p>
         <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
       </div>
       <!-- Customization -->
